[ADD] fuul crud api for todos
